# ir_cam_hans_on

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
1/1-1_uvのインストール/: index.html
1/1-2_uvの設定/: index.html
1_uvの設定/: index.html
2/2-1_デプスとrgb画像の取得/: index.html
2/2-2_カメラ設定の変更/: index.html
2/2-3_複数台のカメラの接続/: index.html
docs/: 1_uvの設定.md  index.md
docs/1/: 1-1_uvのインストール.md  1-2_uvの設定.md
docs/2/: 2-1_デプスとrgb画像の取得.md  2-2_カメラ設定の変更.md  2-3_複数台のカメラの接続.md
programs/1/: hello.py
programs/2/: getDepthRgb.py  getDoubleCam.py  getIrDoubleImg.py
search/: search_index.json
workflows/: ci.yml
